--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "start": "ts-node-dev --respawn --transpile-only src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint:check": "eslint --ignore-path .eslintignore --ext .js,.ts .",
-    "lint:fix": "eslint --fix",
+    "lint:fix": "eslint . --fix",
     "prettier:check": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
-    "lint-prettier": "yarn lint:check && yarn prettier:check"
+    "lint-prettier": "yarn lint:check && yarn prettier:check",
+    "prettier:fix":"prettier --write"
   },
   "author": "@jawadJisan",
   "license": "ISC",
   "lint-staged": {
-    "src/**/*.ts":"yarn lint-prettier"
+    "src/**/*.ts": "yarn lint-prettier"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
